external/lib25519-20241004/build/arm64/unified/ge25519doublescalarmultprecomputeS/2/shared/result-compile-ge25519_double_scalarmult_precompute
ge25519_double_scalarmult_precompute.S:2614:19: error: unexpected token in '.section' directive
.section .note.GNU-stack,"",@progbits
                  ^
